--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+autopep8 = "*"
 
 [dev-packages]
+autopep8 = "*"
+black = "*"
 
 [requires]
 python_version = "3"
+
+[pipenv]
+allow_prereleases = true
